Bug #53512
radosgw-admin bucket rm --bucket=${bucket} --bypass-gc --purge-objects failing crashing on buckets having incomplete multiparts
0%
Description
radosgw-admin bucket rm --bucket=testbucket1 --bypass-gc --purge-objects crashes
Steps to Reproduce:
1. Create a bucket :
s3cmd mb s3://testbucket1
2. Abort the multipart upload :
s3cmd put /boot/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img s3://testbucket1
upload: '/boot/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' -> 's3://testbucket1/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' [part 1 of 6, 15MB] [1 of 1]
15728640 of 15728640 100% in 0s 21.19 MB/s done
upload: '/boot/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' -> 's3://testbucket1/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' [part 2 of 6, 15MB] [1 of 1]
15728640 of 15728640 100% in 0s 22.57 MB/s done
upload: '/boot/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' -> 's3://testbucket1/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' [part 3 of 6, 15MB] [1 of 1]
65536 of 15728640 0% in 0s 1301.21 kB/s^CERROR:
Upload of '/boot/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img' part 3 failed. Use
/usr/bin/s3cmd abortmp s3://testbucket1/initramfs-0-rescue-6d298da93b6e47828ddf0d55f92b4461.img 2~eltPdbtxJhLeQmK2d0uvgBeXjS6kDvB
to abort the upload, or
/usr/bin/s3cmd --upload-id 2~eltPdbtxJhLeQmK2d0uvgBeXjS6kDvB put ...
to continue the upload.
See ya!
- radosgw-admin bucket rm --bucket=testbucket1 --bypass-gc --purge-objects
Related issues
History
#1 Updated by Casey Bodley about 1 year ago
- Status changed from New to Pending Backport
- Tags set to gc
- Backport changed from pacific,octopus,nautilus to pacific octopus
#2 Updated by Backport Bot about 1 year ago
- Copied to Backport #53563: octopus: radosgw-admin bucket rm --bucket=${bucket} --bypass-gc --purge-objects failing crashing on buckets having incomplete multiparts added
#3 Updated by Backport Bot about 1 year ago
- Copied to Backport #53564: pacific: radosgw-admin bucket rm --bucket=${bucket} --bypass-gc --purge-objects failing crashing on buckets having incomplete multiparts added
#4 Updated by Cory Snyder about 1 year ago
The RadosMultipartUpload::abort method that was updated in the associated PR never made it to Pacific or Octopus. (https://github.com/ceph/ceph/pull/42266 was not back-ported). Do we need to backport that PR first or should the backports of this issue be cancelled?
#5 Updated by Casey Bodley 11 months ago
we shouldn't need to backport the zipper changes for RadosMultipartUpload::abort, no. in pacific/octopus, this logic is in rgw_multi.cc:abort_multipart_upload() at https://github.com/ceph/ceph/blob/pacific/src/rgw/rgw_multi.cc#L260-L269
it looks like the change from https://github.com/ceph/ceph/pull/44237 would apply cleanly to that function instead
#6 Updated by Backport Bot 6 months ago
- Tags changed from gc to gc backport_processed